# sps

./: .gitignore  Cargo.toml  Dockerfile  README.md  action.yml  docker-compose.yml
.github/workflows/: ci.yml
blocklists/: update.sh
crates/scanner-bestpractices/: Cargo.toml
crates/scanner-bestpractices/src/: accessibility.rs  lib.rs  privacy_json.rs  security_txt.rs
crates/scanner-browser/: Cargo.toml
crates/scanner-browser/src/: collect.rs  launch.rs  lib.rs  navigate.rs  wait.rs
crates/scanner-cli/: Cargo.toml
crates/scanner-cli/src/: main.rs  recommendations.rs
crates/scanner-cookies/: Cargo.toml
crates/scanner-cookies/src/: analysis.rs  lib.rs
crates/scanner-core/: Cargo.toml
crates/scanner-core/src/: browser_types.rs  check.rs  lib.rs  report.rs  score.rs  spec.rs  ssrf.rs
crates/scanner-dns/: Cargo.toml
crates/scanner-dns/src/: caa.rs  dkim.rs  dmarc.rs  dnssec.rs  lib.rs  spf.rs
crates/scanner-engine/: Cargo.toml
crates/scanner-engine/src/: lib.rs  recommendations.rs  validate.rs
crates/scanner-headers/: Cargo.toml
crates/scanner-headers/src/: csp.rs  lib.rs  misc.rs  permissions.rs  referrer.rs
crates/scanner-server/: Cargo.toml
crates/scanner-server/src/: api.rs  auth.rs  badge.rs  dial.rs  lib.rs  rate_limit.rs  scheduler.rs
crates/scanner-server/src/storage/: mod.rs  postgres.rs  sqlite.rs  traits.rs
crates/scanner-tracking/: Cargo.toml
crates/scanner-tracking/src/: blocklists.rs  fingerprint.rs  lib.rs  parser.rs  resources.rs
crates/scanner-transport/: Cargo.toml
crates/scanner-transport/src/: hsts.rs  lib.rs  tls.rs
extension/: manifest.json  popup.css
spec/: v1.0.md
