[package]
name = "scanner-browser"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Headless Chromium browser integration for the Seglamater Privacy Scanner"

[dependencies]
scanner-core = { workspace = true }
chromiumoxide = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
hickory-resolver = { workspace = true }
url = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
