[package]
name = "seglamater-scan"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Seglamater Privacy Scanner — evaluate any website against the Seglamater Privacy Specification"

[[bin]]
name = "seglamater-scan"
path = "src/main.rs"

[dependencies]
scanner-core = { workspace = true }
scanner-transport = { workspace = true }
scanner-headers = { workspace = true }
scanner-tracking = { workspace = true }
scanner-cookies = { workspace = true }
scanner-dns = { workspace = true }
scanner-bestpractices = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
colored = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
anyhow = { workspace = true }
rustls = { workspace = true }
