[package]
name = "seglamater-scan"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Seglamater Privacy Scanner — evaluate any website against the Seglamater Privacy Specification"

[[bin]]
name = "seglamater-scan"
path = "src/main.rs"

[dependencies]
scanner-core = { workspace = true }
scanner-engine = { workspace = true }
scanner-server = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
rustls = { workspace = true }
