[package]
name = "scanner-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Scan orchestration engine for the Seglamater Privacy Scanner"

[features]
default = []
browser = ["scanner-browser"]

[dependencies]
scanner-core = { workspace = true }
scanner-transport = { workspace = true }
scanner-headers = { workspace = true }
scanner-tracking = { workspace = true }
scanner-cookies = { workspace = true }
scanner-dns = { workspace = true }
scanner-bestpractices = { workspace = true }
scanner-browser = { workspace = true, optional = true }
tokio = { workspace = true }
reqwest = { workspace = true }
hickory-resolver = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
